# funnel

./: CMakeLists.txt  README.md
funnel/: CMakeLists.txt  funnel.cpp  funnel.h  parser.cpp  parser.h  scanner.cpp  scanner.h
funnel/net/: http-server.h
net/: http-server.cpp  http-server.h
